--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "mews/captcha": "^3.4",
         "owenvoke/blade-fontawesome": "^2.9",
         "resend/resend-php": "^0.16.0"
     },
