--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
         "format": "npx prettier --write resources/"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
+        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/typography": "^0.5.16",
         "axios": "^1.8.2",
-        "blade-formatter": "^1.42.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "prettier": "^3.5.3",
         "prettier-plugin-blade": "^2.1.21",
         "prettier-plugin-tailwindcss": "^0.6.11",
-        "tailwindcss": "^4.0.0",
+        "tailwindcss": "^4.1.6",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.7.2",
+        "blade-formatter": "^1.42.2"
     }
 }
