--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "log1x/laravel-webfonts": "^2.0",
         "mews/captcha": "^3.4",
         "owenvoke/blade-fontawesome": "^2.9",
-        "resend/resend-php": "^0.16.0"
+        "resend/resend-php": "^0.16.0",
+        "spatie/laravel-pdf": "^1.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
