--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "prettier-plugin-tailwindcss": "^0.6.11",
         "tailwindcss": "^4.0.0",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "puppeteer": "^24.8.2"
     }
 }
