--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "mews/captcha": "^3.4",
         "owenvoke/blade-fontawesome": "^2.9",
         "resend/resend-php": "^0.16.0",
-        "spatie/laravel-pdf": "^1.5"
+        "spatie/laravel-pdf": "^1.5",
+        "spatie/laravel-permission": "^6.18"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
